# eratos-xarray

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CD-PyPi-Release-Dev.yaml  CD-PyPi-Release.yaml
eratos-xarray/: pyproject.toml
eratos_xarray/: __init__.py
eratos_xarray/backend/: eratos_.py
tests/: test_eratos_sdk.py
