[tool.poetry]
name = "eratos-xarray"
version = "0.1.1"
description = "Xarray backend for Eratos SDK"
authors = ["Chris Sharman <chris.sharman@csiro.au>"]
readme = "README.md"
packages = [{include = "eratos_xarray"}]
license = "MIT"
homepage = "https://bitbucket.csiro.au/projects/SC/repos/eratos-xarray/browse"
repository = "https://bitbucket.csiro.au/projects/SC/repos/eratos-xarray/browse"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
xarray = "^2023.1.0"
numpy = "^1.20.0"
eratos = { url = "https://releases.eratos.com/sdk/python/eratos-python-0.13.8.zip" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
