[tool.poetry]
name = "eratos-xarray"
version = "0.1.0"
description = ""
authors = ["Chris Sharman <chris.sharman@csiro.au>"]
readme = "README.md"
packages = [{include = "eratos_xarray"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
